Update README and add links to GitHub repo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <header>
             <h1>Vector Text</h1>
-            <a href="https://github.com/Jon-Corey" class="button" target="_blank" rel="noopener noreferrer" aria-label="GitHub Repository">
+            <a href="https://github.com/Jon-Corey/VectorText" class="button" target="_blank" rel="noopener noreferrer" aria-label="GitHub Repository">
                 <i class="bi bi-github"></i>
             </a>
             <button type="button" id="theme-toggle" aria-label="Toggle theme">
@@ -181,12 +181,12 @@
 
             <div class="card">
                 <h3>How can I report issues that I encounter?</h3>
-                <p>If you encounter any issues, please open an issue on our GitHub repository.</p>
+                <p>If you encounter any issues, please open an issue on our <a href="https://github.com/Jon-Corey/VectorText" target="_blank" rel="noopener noreferrer">GitHub repository</a>.</p>
             </div>
 
             <div class="card">
                 <h3>How can I contribute to the project?</h3>
-                <p>We welcome contributions! Please check our GitHub repository for guidelines on how to get started.</p>
+                <p>We welcome contributions! Please check our <a href="https://github.com/Jon-Corey/VectorText" target="_blank" rel="noopener noreferrer">GitHub repository</a> for guidelines on how to get started.</p>
             </div>
         </section>
 
