Add syntax highlighting to SVG code output

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </button>
             </div>
 
-            <pre id="code-output-container" class="hidden"><code id="output-code"></code></pre>
+            <pre id="code-output-container" class="hidden"><code id="output-code" class="language-svg"></code></pre>
         </main>
 
         <section>
@@ -197,6 +197,7 @@
 
         <script src="/js/slimselect.min.js"></script>
         <script src="/js/opentype.js"></script>
+        <script src="/js/prism.js" data-manual></script>
         <script src="/js/app.js"></script>
     </body>
 </html>
