Add option for accessible title

--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
                             <input type="number" id="wrap-width-input" value="50" min="1">
                         </div>
                     </div>
+
+                    <div class="input-container">
+                        <input type="checkbox" id="accessibility-checkbox" checked>
+                        <label for="accessibility-checkbox">Accessible Title</label>
+                        <button type="button" class="info-button"><i class="bi bi-info-circle"></i></button>
+                        <span class="tooltip">Enable or disable the accessible title for the SVG. This title is used by screen readers to describe the content of the SVG to blind or visually impaired users.</span>
+                    </div>
                 </div>
             </div>
 
