--- a/index.html
+++ b/index.html
@@ -16,13 +16,20 @@
     <body>
         <header>
             <h1>Vector Text</h1>
-            <a href="https://github.com/Jon-Corey/VectorText" class="button" target="_blank" rel="noopener noreferrer" aria-label="GitHub Repository">
-                <i class="bi bi-github"></i>
-            </a>
-            <button type="button" id="theme-toggle" aria-label="Toggle theme">
-                <i class="bi bi-sun icon-light"></i>
-                <i class="bi bi-moon icon-dark"></i>
-            </button>
+            <div class="header-button-group">
+                <a href="https://patreon.com/JonCorey" class="button" target="_blank" rel="noopener noreferrer" aria-label="Patreon">
+                    <svg viewBox="0 0 1080 1080" class="svg-icon">
+                        <path d="M1033.05,324.45c-0.19-137.9-107.59-250.92-233.6-291.7c-156.48-50.64-362.86-43.3-512.28,27.2C106.07,145.41,49.18,332.61,47.06,519.31c-1.74,153.5,13.58,557.79,241.62,560.67c169.44,2.15,194.67-216.18,273.07-321.33c55.78-74.81,127.6-95.94,216.01-117.82C929.71,603.22,1033.27,483.3,1033.05,324.45z"/>
+                    </svg>
+                </a>
+                <a href="https://github.com/Jon-Corey/VectorText" class="button" target="_blank" rel="noopener noreferrer" aria-label="GitHub Repository">
+                    <i class="bi bi-github"></i>
+                </a>
+                <button type="button" id="theme-toggle" aria-label="Toggle theme">
+                    <i class="bi bi-sun icon-light"></i>
+                    <i class="bi bi-moon icon-dark"></i>
+                </button>
+            </div>
         </header>
 
         <main>
@@ -184,6 +191,7 @@
             <div class="card">
                 <h3>Is this really free?</h3>
                 <p>Yes. I built this because I needed a reliable way to convert text to SVG paths. I published it as open source so that others can benefit from it as well.</p>
+                <p>If you find this tool useful, consider supporting me on <a href="https://patreon.com/JonCorey" target="_blank" rel="noopener noreferrer">Patreon</a>.</p>
             </div>
 
             <div class="card">
