Add Open Graph tags

--- a/index.html
+++ b/index.html
@@ -9,9 +9,25 @@
         <link rel="stylesheet" href="/css/slimselect.css">
         <link rel="stylesheet" href="/css/site.css">
 
+        <!-- Primary Meta Tags -->
         <link rel="icon" href="/images/logo.png" type="image/png">
-        <title>Vector Text: Connvert Text to an SVG</title>
+        <title>Vector Text: Convert Text to an SVG</title>
         <meta name="description" content="Convert text to SVG paths for reliable rendering across all platforms and tools.">
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Vector Text: Convert Text to an SVG">
+        <meta property="og:description" content="Convert text to SVG paths for reliable rendering across all platforms and tools.">
+        <meta property="og:image" content="https://vector-text.com/images/card.png">
+        <meta property="og:image:alt" content="Vector Text: Convert Text to an SVG">
+        <meta property="og:url" content="https://vector-text.com">
+
+        <!-- Twitter / X -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:title" content="Vector Text: Convert Text to an SVG">
+        <meta property="twitter:description" content="Convert text to SVG paths for reliable rendering across all platforms and tools.">
+        <meta property="twitter:image" content="https://vector-text.com/images/card.png">
+        <meta property="twitter:image:alt" content="Vector Text: Convert Text to an SVG">
     </head>
     <body>
         <header>
